--- a/Restaurant.Api/appsettings.json
+++ b/Restaurant.Api/appsettings.json
@@ -5,5 +5,123 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=3306;Database=ftbhungary;Uid=root;Pwd=admin;"
+  },
+
+  "Jwt": {
+    "Key": "nBGhCYUN83scLjFzm4pk",
+    "Issuer": "https://localhost:44307/",
+    "Audience": "https://localhost:44307/"
+  },
+  "ActivityLog": {
+    "Using": [
+      "Serilog.Sinks.File",
+      "Serilog.Sinks.Console",
+      "Serilog.Expressions"
+    ],
+    "MinimumLevel": {
+      "Default": "Debug"
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.ConsoleTheme::None, Serilog.Sinks.Console",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] <{SourceContext}> {Message:lj} {NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./Logs/Activity/.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] <{SourceContext}> {Message:lj} {NewLine}{Exception}"
+        }
+      }
+    ]
+  },
+  "BusinessLog": {
+    "Using": [
+      "Serilog.Sinks.File",
+      "Serilog.Sinks.Console",
+      "Serilog.Expressions"
+    ],
+    "MinimumLevel": {
+      "Default": "Debug"
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.ConsoleTheme::None, Serilog.Sinks.Console",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] <{SourceContext}> {Message:lj} {NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./Logs/Business/.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] <{SourceContext}> {Message:lj} {NewLine}{Exception}"
+        }
+      }
+    ]
+  },
+  "DiagnosticLog": {
+    "Using": [
+      "Serilog.Sinks.File",
+      "Serilog.Sinks.Console",
+      "Serilog.Expressions"
+    ],
+    "MinimumLevel": {
+      "Default": "Debug"
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.ConsoleTheme::None, Serilog.Sinks.Console",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] <{SourceContext}> {Message:lj} {NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./Logs/Diagnostic/.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] <{SourceContext}> {Message:lj} {NewLine}{Exception}"
+        }
+      }
+    ]
+  },
+  "SecurityLog": {
+    "Using": [
+      "Serilog.Sinks.File",
+      "Serilog.Sinks.Console",
+      "Serilog.Expressions"
+    ],
+    "MinimumLevel": {
+      "Default": "Debug"
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.ConsoleTheme::None, Serilog.Sinks.Console",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] <{SourceContext}> {Message:lj} {NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./Logs/Security/.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] <{SourceContext}> {Message:lj} {NewLine}{Exception}"
+        }
+      }
+    ]
+  }
 }
