--- a/.gitignore
+++ b/.gitignore
@@ -5,19 +5,18 @@ riderModule.iml
 /_ReSharper.Caches/
 /.idea
 /.vs
-/FTBHungary.Api/Logs/Activity
-/FTBHungary.Api/Logs/Diagnostic
-/FTBHungary.Api/Logs/Security
-/FTBHungary.Api/Logs
-/FTBHungary.Api/bin
-/FTBHungary.Api/obj
-/FTBHungary.Common/obj
-/FTBHungary.Common/bin
-/FTBHungary.Data/obj
-/FTBHungary.Data/bin
-/FTBHungary.DataAccess/obj
-/FTBHungary.DataAccess/bin
-/FTBHungary.Logic/obj
-/FTBHungary.Logic/bin
-/FTBHungary.PlayerDataAccess/bin
-/FTBHungary.PlayerDataAccess/obj
+/Restaurant.Api/Logs/Activity
+/Restaurant.Api/Logs/Diagnostic
+/Restaurant.Api/Logs/Security
+/Restaurant.Api/Logs
+/Restaurant.Api/bin
+/Restaurant.Api/obj
+/Restaurant.Common/obj
+/Restaurant.Common/bin
+/Restaurant.Data/obj
+/Restaurant.Data/bin
+/Restaurant.DataAccess/obj
+/Restaurant.DataAccess/bin
+/Restaurant.Logic/obj
+/Restaurant.Logic/bin
+
