--- a/Restaurant.Api/appsettings.json
+++ b/Restaurant.Api/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;Database=ftbhungary;Uid=root;Pwd=admin;"
+    "RestaurantDB": "User ID=postgres;Password=admin;Host=localhost;Port=5432;Database=RestaurantDB;Pooling=true;"
   },
 
   "Jwt": {
