--- a/Restaurant.Api/Restaurant.Api.csproj
+++ b/Restaurant.Api/Restaurant.Api.csproj
@@ -27,12 +27,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers" />
-    </ItemGroup>
-
-    <ItemGroup>
       <ProjectReference Include="..\Restaurant.Common\Restaurant.Common.csproj" />
       <ProjectReference Include="..\Restaurant.DataAccess\Restaurant.DataAccess.csproj" />
+      <ProjectReference Include="..\Restaurant.Logic\Restaurant.Logic.csproj" />
     </ItemGroup>
 
 </Project>
