--- a/Restaurant.Common/Restaurant.Common.csproj
+++ b/Restaurant.Common/Restaurant.Common.csproj
@@ -13,4 +13,8 @@
       <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.1-dev-00337" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Restaurant.Data\Restaurant.Data.csproj" />
+    </ItemGroup>
+
 </Project>
